hphp/hack/test/typecheck/references/strict_reference2.php.exp
File "strict_reference2.php", line 4, characters 14-16:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
